# Nyon

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY_TLDR.md  CAMERA_SYSTEM_FIX_SUMMARY.md  CHANGELOG.md  CLEANUP_AND_FIX_GUIDE.md  CMakeLists.txt  CODEBASE_ARCHITECTURE_ANALYSIS.md  COMPLETE_DEPENDENCY_GRAPH.md  DEAD_CODE_FUNCTIONALITY_VERIFICATION.md  DEMO_GAMES.md  IMPLEMENTATION_SUMMARY.md  NYON_ENGINE_ENGINEERING_REPORT.md  NYON_ENGINE_REPORT_2_DEEP_SWEEP.md  NYON_PHYSICS_ENGINE_REPORT(1).md  PHYSICS_COMPLETE_SUMMARY.md  PHYSICS_OVERHAUL_SUMMARY.md  PHYSICS_QUICK_REFERENCE.md  QUICK_REFERENCE.md  README.md  README_TESTING.md  RENDERING_SYSTEM.md  RUNTIME_EXECUTION_FLOW.md  TESTING.md  TUTORIAL.md  nyon-engine-analysis.md  nyon_bug_report.md  nyon_report_skeleton.md  opencode.json  prompt.txt  run_tests.sh
.github/workflows/: ci.yml  clean-for-ingest.yml
engine/: CMakeLists.txt
engine/assets/shaders/: capsule.frag  capsule.vert  circle.frag  circle.vert  circle_instanced.frag  circle_instanced.vert  line.frag  line.vert  polygon.frag  polygon.vert  quad.frag  quad.vert  quad_instanced.frag  quad_instanced.vert
engine/include/KHR/: khrplatform.h
engine/include/glad/: glad.h
engine/include/nyon/: EngineConstants.h  Particle.h
engine/include/nyon/core/: Application.h  ECSApplication.h
engine/include/nyon/ecs/: ComponentStore.h  EntityManager.h  System.h  SystemManager.h
engine/include/nyon/ecs/components/: BehaviorComponent.h  CameraComponent.h  ColliderComponent.h  JointComponent.h  ParticleComponent.h  ParticleEmitterComponent.h  PhysicsBodyComponent.h  PhysicsWorldComponent.h  RenderComponent.h  TransformComponent.h
engine/include/nyon/ecs/systems/: CameraSystem.h  CollisionPipelineSystem.h  CollisionSystem.h  ConstraintSolverSystem.h  ContinuousCollisionSystem.h  DebugRenderSystem.h  InputSystem.h  ParticlePipelineSystem.h  ParticleRenderSystem.h  PhysicsIntegrationSystem.h  PhysicsPipelineSystem.h  PhysicsSystem.h  RenderSystem.h  TransformPhysicsSyncSystem.h
engine/include/nyon/graphics/: ParticleRenderer.h  PhysicsDebugRenderer.h  Renderer2D.h  ShaderLoader.h
engine/include/nyon/math/: Vector2.h  Vector3.h
engine/include/nyon/physics/: BoundarySystem.h  CollisionDetectionStrategy.h  ConstraintSolver.h  ContactSolver.h  ContactTypes.h  ContinuousCollisionDetection.h  DynamicTree.h  Island.h  ManifoldGenerator.h  PhysicsPipeline.h  SATCollisionDetector.h  StabilizationSystem.h
engine/include/nyon/utils/: CollisionPhysics.h  GravityPhysics.h  InputManager.h  MovementPhysics.h  Physics.h  ThreadPool.h
engine/src/: glad.c
engine/src/core/: Application.cpp  ECSApplication.cpp
engine/src/ecs/: ComponentStore.cpp  EntityManager.cpp  SystemManager.cpp
engine/src/ecs/systems/: CameraSystem.cpp  CollisionPipelineSystem.cpp  ConstraintSolverSystem.cpp  ContinuousCollisionSystem.cpp  DebugRenderSystem.cpp  ParticlePipelineSystem.cpp  ParticleRenderSystem.cpp  PhysicsPipelineSystem.cpp  RenderSystem.cpp  TransformPhysicsSyncSystem.cpp
engine/src/graphics/: ParticleRenderer.cpp  PhysicsDebugRenderer.cpp  Renderer2D.cpp  Renderer2D.cpp.backup  RenderingDemo.cpp  ShaderLoader.h
engine/src/physics/: BoundarySystem.cpp  ConstraintSolver.cpp  ContactSolver.cpp.bak  ContinuousCollisionDetection.cpp  DynamicTree.cpp  Island.cpp  ManifoldGenerator.cpp  PhysicsPipeline.cpp  SATCollisionDetector.cpp  StabilizationSystem.cpp
engine/src/utils/: CollisionPhysics.cpp  GravityPhysics.cpp  InputManager.cpp  MovementPhysics.cpp  Physics.cpp  ThreadPool.cpp
game/breakout-demo/: CMakeLists.txt
game/breakout-demo/include/: BreakoutDemo.h
game/breakout-demo/src/: BreakoutDemo.cpp  main.cpp
game/camera-demo/: CMakeLists.txt
game/camera-demo/include/: CameraDemo.h
game/camera-demo/src/: CameraDemo.cpp  main.cpp
game/flappy-demo/: CMakeLists.txt
game/flappy-demo/include/: FlappyDemo.h
game/flappy-demo/src/: FlappyDemo.cpp  main.cpp
game/particle-collision-demo/: CMakeLists.txt
game/particle-collision-demo/src/: ParticleCollisionDemo.cpp  ParticleCollisionDemo.h  main.cpp
game/physics-demo/: CMakeLists.txt
game/physics-demo/include/: PhysicsDemoGame.h
game/physics-demo/src/: PhysicsDemoGame.cpp  main.cpp
game/simple-physics-demo/: CMakeLists.txt
game/simple-physics-demo/include/: SimplePhysicsDemo.h
game/simple-physics-demo/src/: SimplePhysicsDemo.cpp  main.cpp
game/simple-test/: CMakeLists.txt
game/simple-test/include/: SimplePhysicsTest.h
game/simple-test/src/: main.cpp
game/smash-bros-clone/: CMakeLists.txt
game/smash-bros-clone/include/: GameApplication.h
game/smash-bros-clone/src/: GameApplication.cpp  main.cpp
game/tower-stack-demo/: CMakeLists.txt
game/tower-stack-demo/include/: TowerStackDemo.h
game/tower-stack-demo/src/: TowerStackDemo.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
test/include/: TestHelpers.h  TestLogger.h
test/unit/: ApplicationTest.cpp  BehaviorComponentTest.cpp  ColliderComponentTest.cpp  CollisionPhysicsTest.cpp  ECSComponentStoreTest.cpp  ECSComponentTest.cpp  ECSManagerTest.cpp  ECSSystemManagerTest.cpp  ECSSystemTest.cpp  InputManagerTest.cpp  MathVector2Test.cpp  MathVector3Test.cpp  PhysicsBodyComponentTest.cpp  PhysicsGravityTest.cpp  PhysicsMovementTest.cpp  PhysicsWorldComponentTest.cpp  Renderer2DTest.cpp
tutorial/: 01-project-setup.md  02-ecs-basics-and-entities.md  03-physics-and-collisions.md  04-rendering-and-debug-views.md  05-input-and-gameplay-loop.md  06-building-a-simple-physics-demo.md  README.md
